# mcp_archi

./: .gitignore  pyproject.toml  requirements-lock.txt  requirements.txt
.agents/skills/archimate-agent/: SKILL.md
.agents/skills/archimate-model-cud/: SKILL.md
.agents/skills/archimate-model-management/: SKILL.md
.agents/skills/archimate-model-query/: SKILL.md
.agents/skills/drawio/: SKILL.md
.agents/skills/projectsetup/: SKILL.md
.github/agents/: analyst.agent.md  archimate architect.agent.md
output/: drawio_Business_Actors_20260226_185731.drawio  drawio_Business_actors___processes___their_relations_20260225_124459.drawio  drawio_object_canonical_test_20260225_125250.drawio  drawio_object_persistence_test_20260225_124905.drawio
requirements/mcp/servers/archimate/: archimate.md  tool_action_matrix.md
requirements/mcp/servers/archimate/tools/archimate_attribute_dictionary/: requirements.md
requirements/mcp_tool_apps/: selectable_matrix.md  selectable_table.md
requirements/mcp_tool_output/: Untitled Diagram.drawio  drawio.md
src/mcp/servers/: __init__.py
src/mcp/servers/archimate/: __init__.py  __main__.py  db.py  model_db.py  server.py
src/mcp/servers/archimate/data/: archimate_3_2.sqlite  archimate_models.sqlite
src/mcp/servers/archimate/resources/: styles.css  styles.py
src/mcp/servers/archimate/selectable_table/: server.py
src/mcp/servers/archimate/tools/: __init__.py
src/mcp/servers/common/: __init__.py
src/mcp/servers/export_csv/: __init__.py  __main__.py  server.py
src/mcp/servers/export_csv/tools/: __init__.py
(+35 files in other folders)
