[project]
name = "mcp-archi"
version = "0.1.0"
description = "ArchiMate MCP servers – metamodel queries, model CRUD, draw.io export, CSV export"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14,<3",
    "mcp>=1.26,<2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

# ---------------------------------------------------------------------------
# Build system – flit-core is lightweight and understands src-layout natively
# ---------------------------------------------------------------------------
[build-system]
requires = ["flit_core>=3.9,<4"]
build-backend = "flit_core.buildapi"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.flit.module]
name = "servers"

[tool.flit.sdist]
include = ["src/mcp/servers/"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src/mcp"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/mcp"]
